Panels 7.x-dev
==============

#920266 by dereine: Typo in cache.inc caused wsods in rare circumstances.
#879482 by mvc: Ensure Panels and CTools module files are loaded during update. Apparently could cause WSOD if not.
#917614 by jskulski: IPE broken in IE.